--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,9 @@ environment:
 
 dependencies:
   meta: ^1.3.0
-  path: ^1.8.0
+
+  errno: ^1.1.0
 
 dev_dependencies:
   test: ^1.5.1
+  path: ^1.8.0
