--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,13 @@
 name: file_errors
 description: "Cross-platform extensions that help determine the cause of a caught FileSystemException"
-version: 0.0.0-dev
-homepage: https://github.com/rtmigo/xrandom
+version: 1.0.0
+homepage: https://github.com/rtmigo/file_errors
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  meta: ^1.3.0
-
+  #meta: ^1.3.0
   errno: ^1.1.0
 
 dev_dependencies:
