--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: file_errors
-description: "Cross-platform extensions that help determine the cause of a caught FileSystemException"
-version: 1.0.0
+description: "Cross-platform extensions that help determine the cause of a caught FileSystemException."
+version: 1.0.2
 homepage: https://github.com/rtmigo/file_errors
 
 environment:
